--- a/page_02.html
+++ b/page_02.html
@@ -234,28 +234,112 @@
     </div>
 	  <div class="main">
       <!--page2-->
-	    <section class="page4">
+	    <section class="page5">
 	      <div class="page_container">
-          <div class="page4_content">
-            <h2 class="page4_content--row1">우리아이키는</h2>
-            <h1 class="page4_content--row2">상위 20% </h1>
-            <h3 class="page4_content--row3">입니다.</h3>
-            <p class="page4_content--row4">우리 아이 최종 예상키는<span> 186cm </span>입니다.</p>
-            <p class="page4_content--row5">최종 예상키는 부모와 또래의 평균값을 토대로 계산 되며 개인에 따라 차이가 있을 수 있습니다.</p>
+          <div class="page5_content">
+            <h1 class="page5_content--rowOne">우리 아이 예상키 이력</h1>
+            <div class="table-scroll">
+              <table class="table table-condensed table_cust">
+                <thead>
+                  <tr>
+                    <th>날짜</th>
+                    <th>성별</th>
+                    <th>나이</th>
+                    <th>키</th>
+                    <th>몸무게</th>
+                    <th>아빠</th>
+                    <th>엄마키</th>
+                    <th>예상</th>
+                    <th>사진</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>2019-01-01</td>
+                    <td>여</td>
+                    <td>17개월</td>
+                    <td>88cm</td>
+                    <td>12kg</td>
+                    <td>183cm</td>
+                    <td>153cm</td>
+                    <td>163cm</td>
+                    <td>O</td>
+                  </tr>
+                  <tr>
+                    <td>2019-01-01</td>
+                    <td>여</td>
+                    <td>17개월</td>
+                    <td>88cm</td>
+                    <td>12kg</td>
+                    <td>183cm</td>
+                    <td>153cm</td>
+                    <td>163cm</td>
+                    <td>O</td>
+                  </tr>
+                  <tr>
+                    <td>2019-01-01</td>
+                    <td>여</td>
+                    <td>17개월</td>
+                    <td>88cm</td>
+                    <td>12kg</td>
+                    <td>183cm</td>
+                    <td>153cm</td>
+                    <td>163cm</td>
+                    <td>O</td>
+                  </tr>
+                  <tr>
+                    <td>2019-01-01</td>
+                    <td>여</td>
+                    <td>17개월</td>
+                    <td>88cm</td>
+                    <td>12kg</td>
+                    <td>183cm</td>
+                    <td>153cm</td>
+                    <td>163cm</td>
+                    <td>O</td>
+                  </tr>
+                  <tr>
+                    <td>2019-01-01</td>
+                    <td>여</td>
+                    <td>17개월</td>
+                    <td>88cm</td>
+                    <td>12kg</td>
+                    <td>183cm</td>
+                    <td>153cm</td>
+                    <td>163cm</td>
+                    <td>O</td>
+                  </tr>
+                  <tr>
+                    <td>2019-01-01</td>
+                    <td>여</td>
+                    <td>17개월</td>
+                    <td>88cm</td>
+                    <td>12kg</td>
+                    <td>183cm</td>
+                    <td>153cm</td>
+                    <td>163cm</td>
+                    <td>O</td>
+                  </tr>
+                  <tr>
+                    <td>2019-01-01</td>
+                    <td>여</td>
+                    <td>17개월</td>
+                    <td>88cm</td>
+                    <td>12kg</td>
+                    <td>183cm</td>
+                    <td>153cm</td>
+                    <td>163cm</td>
+                    <td>O</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
             <p>
-              <a href="#" class="page_02--btnMore page02-bg_01">
-                기록을 저장하시려면
-                <br />로그인 하세요.
-              </a>
-              <a href="#" class="page_02--btnMore_2">
-                <span>결과 공유하기 </span>
-                <img src="images/아이콘_페이스북.png">
-                <img src="images/ic-naver.png">
-                <img src="images/icon-kakaotalk.png">
-                <img src="images/아이콘_인스타 복사.png">
-              </a>
+              <a class="btn_pageTwo_def btn_pageTwo_padd" href="#">또래 통계 살펴보기</a>
+              <a class="btn_pageTwo_def btn_pageTwo_bg" href="#">사진 촬영 가능 병원 보기</a>
             </p>
           </div>
+          <div class="clearfix"></div>
 	      </div>
       </section><!--/page2_END-->
     </div>
