--- a/page_03.html
+++ b/page_03.html
@@ -234,15 +234,19 @@
     </div>
 	  <div class="main">
       <!--page2-->
-	    <section class="page4">
+	    <section class="page5">
 	      <div class="page_container">
-          <div class="page4_content">
-            <h2 class="page4_content--row1">우리아이키는</h2>
-            <h1 class="page4_content--row2">상위 20% </h1>
-            <h3 class="page4_content--row3">입니다.</h3>
-            <p class="page4_content--row4">우리 아이 최종 예상키는<span> 186cm </span>입니다.</p>
-            <p class="page4_content--row5">최종 예상키는 부모와 또래의 평균값을 토대로 계산 되며 개인에 따라 차이가 있을 수 있습니다.</p>
-            <p>
+          <div class="page_05--content">
+            <h1 class="page_05--contentTitle">
+              방사선량은 <span class="page_05--contentTitlev1">2.20</span> <span class="page_05--contentTitlev2">mGy입니다.</span>
+            </h1>
+            <p class="page_05--contentRow02">
+              ※ 해당 서비스는 의료서비스가 아닌 식품의약품안전처에서 발행한 국내영상의학검사에서의 진단참고수준  수치를 기반으로 계산된 결과입니다.
+            </p>
+            <p class="page_05--contentRow02">
+              ※ 실제 결과값은 X선에 노출된 조직, 방사선 기계 및 기계의 전력 값에 따라 달라질 수 있습니다.
+            </p>
+            <p class="page_05Btn">
               <a href="#" class="page_02--btnMore page02-bg_01">
                 기록을 저장하시려면
                 <br />로그인 하세요.
@@ -254,7 +258,23 @@
                 <img src="images/icon-kakaotalk.png">
                 <img src="images/아이콘_인스타 복사.png">
               </a>
+              <div class="clearfix"></div>
             </p>
+            <p class="page_05--contentRow04">방사선이 인간에게 미치는 영향</p>
+            <div class="w100vh">
+              <div class="w50vh">
+                <h1 class="w50vh--title">방사선에 따른  <span>신체 부위 질병</span></h1>
+                <p>
+                  <img src="images/신체부위질병.png">
+                </p>
+              </div>
+              <div class="w50vh pull-right">
+                <h1 class="w50vh--title">방사선 노출에 따른  <span>신체 증상</span></h1>
+                <p>
+                  <img src="images/2.png">
+                </p>
+              </div>
+            </div>
           </div>
 	      </div>
       </section><!--/page2_END-->
