--- a/page_05.html
+++ b/page_05.html
@@ -12,6 +12,13 @@
   <script type="text/javascript" src="js/jquery.onepage-scroll.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
+    <!--owl-slider-->
+    <!-- Stylesheets -->
+  <link rel="stylesheet" href="js/owl_slider/docs.theme.min.css">
+
+  <!-- Owl Stylesheets -->
+  <link rel="stylesheet" href="js/owl_slider/owl.carousel.min.css">
+  <link rel="stylesheet" href="js/owl_slider/owl.theme.default.min.css">
     <!--MenuMobile-->
   <link rel="stylesheet" type="text/css" href="css/menuMobile/component.css" />
   <script src="css/menuMobile/modernizr.custom.js"></script>
@@ -31,7 +38,7 @@
         <div class="col-md-6 col-sm-6 col-xs-12 menuDestop">
       <div id='cssmenu'>
         <ul>
-           <li class=''><a href='#'>마이스캔셰어</a></li>
+           <li class='active'><a href='#'>마이스캔셰어</a></li>
            <li class='has-sub'><a href='#'>2nd Opinion 서비스</a>
               <ul>
                  <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
@@ -49,7 +56,7 @@
                  </li>
               </ul>
            </li>
-           <li class='has-sub active'><a href='#'>아이 예상키 서비스</a>
+           <li class='has-sub'><a href='#'>아이 예상키 서비스</a>
               <ul>
                  <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
                     <ul>
@@ -233,34 +240,70 @@
       </div>
     </div>
 	  <div class="main">
+	    
       <!--page2-->
-	    <section class="page4">
+	    <section class="page2">
 	      <div class="page_container">
-          <div class="page4_content">
-            <h2 class="page4_content--row1">우리아이키는</h2>
-            <h1 class="page4_content--row2">상위 20% </h1>
-            <h3 class="page4_content--row3">입니다.</h3>
-            <p class="page4_content--row4">우리 아이 최종 예상키는<span> 186cm </span>입니다.</p>
-            <p class="page4_content--row5">최종 예상키는 부모와 또래의 평균값을 토대로 계산 되며 개인에 따라 차이가 있을 수 있습니다.</p>
-            <p>
-              <a href="#" class="page_02--btnMore page02-bg_01">
-                기록을 저장하시려면
-                <br />로그인 하세요.
-              </a>
-              <a href="#" class="page_02--btnMore_2">
-                <span>결과 공유하기 </span>
-                <img src="images/아이콘_페이스북.png">
-                <img src="images/ic-naver.png">
-                <img src="images/icon-kakaotalk.png">
-                <img src="images/아이콘_인스타 복사.png">
-              </a>
-            </p>
+          <div class="page2--content">
+            <div class="textContent">
+              <h2 class="textContent--One">우리아이</h2>
+              <h1 class="textContent--Two">예상키는</h1>
+              <div class="questionMarkAbs">?</div>
+              <p class="textContent--Three">우리 아이 성인이 됐을 때, 예상키를 알아볼까요?</p>
+            </div>
+            <form>
+              <div class="page2--form">
+                <div class="page2--form---content">
+                  <div class="row">
+                    <div class="col-md-6 col-sm-6 col-xs-6 radioCust">
+                      <span>여자</span> 
+                      <input type="radio" id="shipadd1" value="1" name="address" />
+                      <label for="shipadd1"></label>
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-6 radioCust">
+                      <span>남자 </span> 
+                      <input type="radio" id="shipadd2" value="2" name="address" />
+                      <label for="shipadd2"></label>
+                    </div>
+                    <div class="col-md-12 radioCust--row01">
+                      <div class="row">
+                        <div class="col-md-7 col-sm-7 col-xs-6">
+                          <input type="text" name=""> 년생
+                        </div>
+                        <div class="col-md-5 col-sm-5 col-xs-6">
+                          <input type="text" name=""> 월
+                        </div>
+                      </div>
+                    </div>
+
+                    <!---->
+                    <div class="col-md-6 col-sm-6 col-xs-6 custInpRow02 radioCust--row01">
+                      키<input type="text" name=""> cm,
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-6 custInpRow02 radioCust--row01">
+                      체중<input type="text" name=""> kg
+                    </div>
+
+                    <!---->
+                    <div class="col-md-6 col-sm-6 col-xs-6 custInpRow03 radioCust--row01">
+                      엄마<input type="text" name=""> cm,
+                    </div>
+                    <div class="col-md-6 col-sm-6 col-xs-6 custInpRow03 radioCust--row01">
+                      아빠<input type="text" name=""> cm
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a class="btnMore_page2" href="#">최종 예측 신장 보기</a>
+              <p class="cmtForm"><span>*</span> 손 부위의 X-ray 사진을 첨부하시면 뼈나이 측정을 통해 더욱 정확한 결과를 얻을 수 있습니다.</p>
+            </form>
           </div>
 	      </div>
       </section><!--/page2_END-->
     </div>
   </div>
 
+  <script src="js/owl_slider/owl.carousel.js"></script> 
   <script type="text/javascript" src="js/main.js"></script>
   <script src="css/menuMobile/jquery.dlmenu.js"></script>
     <script>
