--- a/page_05.html
+++ b/page_05.html
@@ -25,6 +25,7 @@
 
   <link href='css/onepage-scroll.css' rel='stylesheet' type='text/css'>
   <link href='css/bootstrap.css' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link href='css/style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
