--- a/page_04.html
+++ b/page_04.html
@@ -242,7 +242,7 @@
 	  <div class="main">
 	    
       <!--page3-->
-	    <section class="page3">
+	    <section class="page3 page03">
 	      <div class="page_container">
           <div class="container">
             <div class="row">
