--- a/page_05.html
+++ b/page_05.html
@@ -243,7 +243,7 @@
 	  <div class="main">
 	    
       <!--page2-->
-	    <section class="page2">
+	    <section class="page2 page02">
 	      <div class="page_container">
           <div class="page2--content">
             <div class="textContent">
