--- a/index.html
+++ b/index.html
@@ -39,56 +39,11 @@
       <div id='cssmenu'>
         <ul>
            <li class='active'><a href='#'>마이스캔셰어</a></li>
-           <li class='has-sub'><a href='#'>2nd Opinion 서비스</a>
-              <ul>
-                 <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
-                    <ul>
-                       <li><a href='#'>Vòng một</a></li>
-                       <li><a href='#'>Vòng hai</a></li>
-                       <li><a href='#'>Vòng ba</a></li>
-                    </ul>
-                 </li>
-                 <li class='has-sub'><a href='#'>2. Báo cáo chiều cao, cân nặng</a>
-                    <ul>
-                       <li><a href='#'>Chiều cao</a></li>
-                       <li><a href='#'>Cân nặng</a></li>
-                    </ul>
-                 </li>
-              </ul>
+           <li class=''><a href='#'>2nd Opinion 서비스</a>
            </li>
-           <li class='has-sub'><a href='#'>아이 예상키 서비스</a>
-              <ul>
-                 <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
-                    <ul>
-                       <li><a href='#'>Vòng một</a></li>
-                       <li><a href='#'>Vòng hai</a></li>
-                       <li><a href='#'>Vòng ba</a></li>
-                    </ul>
-                 </li>
-                 <li class='has-sub'><a href='#'>2. Báo cáo chiều cao, cân nặng</a>
-                    <ul>
-                       <li><a href='#'>Chiều cao</a></li>
-                       <li><a href='#'>Cân nặng</a></li>
-                    </ul>
-                 </li>
-              </ul>
+           <li class=''><a href='#2'>아이 예상키 서비스</a>
            </li>
-           <li class='has-sub'><a href='#'>방사선량 서비스</a>
-              <ul>
-                 <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
-                    <ul>
-                       <li><a href='#'>Vòng một</a></li>
-                       <li><a href='#'>Vòng hai</a></li>
-                       <li><a href='#'>Vòng ba</a></li>
-                    </ul>
-                 </li>
-                 <li class='has-sub'><a href='#'>2. Báo cáo chiều cao, cân nặng</a>
-                    <ul>
-                       <li><a href='#'>Chiều cao</a></li>
-                       <li><a href='#'>Cân nặng</a></li>
-                    </ul>
-                 </li>
-              </ul>
+           <li class=''><a href='#3'>방사선량 서비스</a>
            </li>
         </ul>
       </div>
@@ -130,73 +85,21 @@
               <ul class="dl-menu">
                 <li>
                   <a href="#">Fashion</a>
-                  <ul class="dl-submenu">
-                    <li>
-                      <a href="#">Men</a>
-                      <ul class="dl-submenu">
-                        <li><a href="#">Shirts</a></li>
-                        <li><a href="#">Jackets</a></li>
-                        <li><a href="#">Chinos &amp; Trousers</a></li>
-                        <li><a href="#">Jeans</a></li>
-                        <li><a href="#">T-Shirts</a></li>
-                        <li><a href="#">Underwear</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a href="#">Women</a>
-                      <ul class="dl-submenu">
-                        <li><a href="#">Jackets</a></li>
-                        <li><a href="#">Knits</a></li>
-                        <li><a href="#">Jeans</a></li>
-                        <li><a href="#">Dresses</a></li>
-                        <li><a href="#">Blouses</a></li>
-                        <li><a href="#">T-Shirts</a></li>
-                        <li><a href="#">Underwear</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a href="#">Children</a>
-                      <ul class="dl-submenu">
-                        <li><a href="#">Boys</a></li>
-                        <li><a href="#">Girls</a></li>
-                      </ul>
-                    </li>
-                  </ul>
                 </li>
                 <li>
                   <a href="#">Electronics</a>
-                  <ul class="dl-submenu">
-                    <li><a href="#">Camera &amp; Photo</a></li>
-                    <li><a href="#">TV &amp; Home Cinema</a></li>
-                    <li><a href="#">Phones</a></li>
-                    <li><a href="#">PC &amp; Video Games</a></li>
-                  </ul>
                 </li>
                 <li>
                   <a href="#">Furniture</a>
                   <ul class="dl-submenu">
                     <li>
                       <a href="#">Living Room</a>
-                      <ul class="dl-submenu">
-                        <li><a href="#">Sofas &amp; Loveseats</a></li>
-                        <li><a href="#">Coffee &amp; Accent Tables</a></li>
-                        <li><a href="#">Chairs &amp; Recliners</a></li>
-                        <li><a href="#">Bookshelves</a></li>
-                      </ul>
                     </li>
                     <li>
                       <a href="#">Bedroom</a>
                       <ul class="dl-submenu">
                         <li>
                           <a href="#">Beds</a>
-                          <ul class="dl-submenu">
-                            <li><a href="#">Upholstered Beds</a></li>
-                            <li><a href="#">Divans</a></li>
-                            <li><a href="#">Metal Beds</a></li>
-                            <li><a href="#">Storage Beds</a></li>
-                            <li><a href="#">Wooden Beds</a></li>
-                            <li><a href="#">Children's Beds</a></li>
-                          </ul>
                         </li>
                         <li><a href="#">Bedroom Sets</a></li>
                         <li><a href="#">Chests &amp; Dressers</a></li>
@@ -291,7 +194,7 @@
       </section><!--/page1_END-->
 	    
       <!--page2-->
-	    <section class="page2">
+	    <section class="page2" id="2">
 	      <div class="page_container">
           <div class="page2--content">
             <div class="textContent">
@@ -351,7 +254,7 @@
       </section><!--/page2_END-->
 	    
       <!--page3-->
-	    <section class="page3">
+	    <section class="page3" id="3">
 	      <div class="page_container">
           <div class="container">
             <div class="row">
