--- a/page_04.html
+++ b/page_04.html
@@ -39,56 +39,11 @@
       <div id='cssmenu'>
         <ul>
            <li class='active'><a href='#'>마이스캔셰어</a></li>
-           <li class='has-sub'><a href='#'>2nd Opinion 서비스</a>
-              <ul>
-                 <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
-                    <ul>
-                       <li><a href='#'>Vòng một</a></li>
-                       <li><a href='#'>Vòng hai</a></li>
-                       <li><a href='#'>Vòng ba</a></li>
-                    </ul>
-                 </li>
-                 <li class='has-sub'><a href='#'>2. Báo cáo chiều cao, cân nặng</a>
-                    <ul>
-                       <li><a href='#'>Chiều cao</a></li>
-                       <li><a href='#'>Cân nặng</a></li>
-                    </ul>
-                 </li>
-              </ul>
+           <li class='h'><a href='#'>2nd Opinion 서비스</a>
            </li>
-           <li class='has-sub'><a href='#'>아이 예상키 서비스</a>
-              <ul>
-                 <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
-                    <ul>
-                       <li><a href='#'>Vòng một</a></li>
-                       <li><a href='#'>Vòng hai</a></li>
-                       <li><a href='#'>Vòng ba</a></li>
-                    </ul>
-                 </li>
-                 <li class='has-sub'><a href='#'>2. Báo cáo chiều cao, cân nặng</a>
-                    <ul>
-                       <li><a href='#'>Chiều cao</a></li>
-                       <li><a href='#'>Cân nặng</a></li>
-                    </ul>
-                 </li>
-              </ul>
+           <li class=''><a href='#'>아이 예상키 서비스</a>
            </li>
-           <li class='has-sub'><a href='#'>방사선량 서비스</a>
-              <ul>
-                 <li class='has-sub'><a href='#'>1. Báo cáo số đo 3 vòng</a>
-                    <ul>
-                       <li><a href='#'>Vòng một</a></li>
-                       <li><a href='#'>Vòng hai</a></li>
-                       <li><a href='#'>Vòng ba</a></li>
-                    </ul>
-                 </li>
-                 <li class='has-sub'><a href='#'>2. Báo cáo chiều cao, cân nặng</a>
-                    <ul>
-                       <li><a href='#'>Chiều cao</a></li>
-                       <li><a href='#'>Cân nặng</a></li>
-                    </ul>
-                 </li>
-              </ul>
+           <li class=''><a href='#'>방사선량 서비스</a>
            </li>
         </ul>
       </div>
